--- a/test.css
+++ b/test.css
@@ -2,3 +2,6 @@
   font-family: 'TestFont';
   src: url(https://github.com/jktypeface/JKTypeface/blob/master/SYFY%20Fantasy.ttf) format('truetype');
 }
+font-family{
+	font-family: 'TestFont';
+}
